# dos-kernel

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  context7.json  dos.toml  gemini-extension.json  install.ps1  install.py  install.sh  llms-full.txt  llms.txt  pyproject.toml  server.json  smithery.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  dos-gate.yml  mcp-registry-publish.yml  publish.yml
benchmark/: BENCHMARKS.md  README.md  VALUEADD_FINAL_2026-06-08.md  VALUEADD_PHASEA_2026-06-08.md  _BENCH_MAP.md  _arms.py  _feasibility.py  _probe_concurrency.py  _probe_horizon_keeper_n_axis.py  _probe_horizon_keeper_n_axis_RESULT.md  _probe_k_cross_corpus_ah.py  _probe_k_cross_corpus_apb.py  _probe_multiagent_fold_waste.py  _probe_multiagent_fold_waste_RESULT.md  _run.py  giveup_cross_benchmark.py  registry.py  si_live_demo.py  test_giveup_cross_benchmark.py  test_k_cross_corpus.py
benchmark/_experiments/: out_of_loop_registry.md
benchmark/adoption/: README-adoption-lift-2026-06-09.md
benchmark/agentdiff/: __init__.py  _gemini.py  _run_delta_b.py  claim.py  coord.py  dataset.py  (+9 more)
claude-plugin/: .mcp.json  README.md
docker/: Dockerfile
docs/: 100_native-spine-port-plan.md  101_watchdog-driver-and-the-poll-cadence.md  102_when-to-trust-an-agent.md  103_memory-is-an-unverified-agent.md  104_externalizing-the-house-style-verdict.md  105_reason-class-recognizer-rung-ladder.md  106_garbage-collection-and-the-reachability-verdict.md  107_resumable-work-and-the-intent-ledger.md  108_the-cheap-lie-and-the-narration-taxonomy.md  109_non-git-evidence-in-the-verify-verdict.md  110_the-concurrency-class-operator-surface.md  111_plan-scaffolding-and-automatic-plan-vs-oracle-checking.md  112_the-dynamic-verified-by-dos-badge.md  113_the-overlap-policy-seam-and-eval-per-axis.md  114_prior-art-audit-where-the-branding-outruns-the-mechanism.md  115_the-under-what-axis-environment-and-version-provenance.md  116_the-durable-commons-and-the-constrained-a2a-problem.md  117_completion-as-a-verdict-the-end-of-working-in-passes.md  118_the-fleet-postmortem-and-the-attribution-join.md  119_the-claim-and-the-tail-wagging-lane.md  120_the-status-digest-a-folded-fact-for-a-fleet.md  121_first-class-on-devices-and-unattended.md  122_the-core-go-runtime-and-the-on-device-kernel.md  123_the-local-model-and-the-independence-coordinate.md  124_the-go-core-build-plan-and-the-parity-contract.md  125_go-hook-fastpath-build-plan.md  125_the-trifecta-color-and-the-capability-conjunction.md  126_the-mediated-write-and-the-apply-gate-pep.md  127_dos-bench-job-integration-audit-2026-06-03.md  129_the-apply-confirmation-as-the-proving-ground-for-non-git-evidence.md  130_benchmarking-the-savings-thesis.md  131_the-capability-source-the-authority-plane-dual-of-the-witness.md  132_what-the-operator-may-resolve-the-authority-floor-of-an-untrusted-driver.md  133_deferred-obligations-and-the-mid-flight-gap.md  134_the-integration-surface-binding-the-verdict-to-the-agent-runtime.md  135_what-dos-learns-from-microsoft-agt.md  136_the-closed-loop-as-the-organizing-principle.md  137_the-trace-spine-and-the-cross-surface-join.md  138_what-is-truth-the-throughline.md  139_phase1-wire-run-id-onto-the-acquire.md  (+231 more)
examples/: README.md
examples/conformance_plugins/judge_plugin/: example_judge.py  pyproject.toml
examples/conformance_plugins/judge_plugin/tests/: test_conformance.py
examples/conformance_plugins/notifier_plugin/: example_notifier.py  pyproject.toml
examples/conformance_plugins/notifier_plugin/tests/: test_conformance.py
examples/conformance_plugins/overlap_policy_plugin/: example_overlap_policy.py  pyproject.toml
examples/conformance_plugins/overlap_policy_plugin/tests/: test_conformance.py
examples/dos_ext/: README.md  cases.jsonl  dos.toml  pyproject.toml  test_friendly_renderer.py
examples/dos_ext/dos_ext/: __init__.py  friendly_renderer.py  judge.py  overlap.py  predicates.py  renderer.py
gitlab-ci/: dos-verify.gitlab-ci.yml
go/: .gitignore  README.md  go.mod
listings/: lobehub-submission.md
paper/: .gitignore  README.md  _REFRESH_2026-06-06.md  assemble.py  assemble_arxiv.py  build.py  embed.py  meta.py  numbering.py  outline.py  paper.html  render.py  style.css
scripts/: backflow_ledger.py  backlog_triage.py  bench_hook_e2e.py  bench_mcp.py  build_dist.py  build_hook_binary.py  build_incident_pages.py  build_llms_full.py  build_plugin.py  build_wheels.py  check_commit_prefix.py  claims_lint.py  discoverability_inventory.py  drift_scoreboard.py  git_hygiene.py  install_facts.py  release_bump.py  release_context.py  release_dry_run.py  seed_scoreboard_index.py  selfmodify_hook_probe.py  stable_release_context.py  trajectory_audit.py  verify_plugin_install.py
spikes/: README.md  state_home_design.wf.js
tests/: conftest.py  test_admission.py  test_agent_surface.py  test_agenthallu_replay.py  test_agentprocessbench_replay.py  test_agt_backend.py  test_answer_shape.py  test_answers.py  test_arbiter.py  test_archive_lock.py  test_arg_provenance.py  test_attest.py  test_backflow_ledger.py  test_backlog_triage.py  test_bench_layering.py  test_braintrust_scorer_example.py  test_breaker.py  test_build_wheels_binary_format.py  test_burn_in_farm_playbook.py  test_canonical_example_lockstep.py  test_central_index.py  test_churn.py  test_ci_status.py  test_citation_resolve.py  test_claim_extract.py  test_claim_ttl.py  test_claims_lint.py  test_cli_ergonomics.py  test_cli_loop.py  test_cli_pickable_enumerate.py  test_cmd_status.py  test_commit_audit.py  test_completion.py  test_concurrency_class.py  test_config_lint.py  test_conformance_plugin_examples.py  test_conformance_suite.py  test_cooldown.py  test_coverage.py  test_cross_host_continuity.py  (+217 more)
verify-action/: README.md  action.yml
(+796 files in other folders)
