# A minimal third-party notifier plugin — the dos.testing worked example.
# Install only the published kernel name `dos-kernel`; the bare `dos` name on
# PyPI is an unrelated package (see the kernel's SECURITY.md "Supply chain").
[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dos-example-notifier-plugin"
version = "0.1.0"
description = "Example dos.notifiers plugin: an in-memory collecting transport, conformance-tested"
requires-python = ">=3.11"
dependencies = ["dos-kernel>=0.25"]

# The registration: `resolve_notifier("collecting")` finds this by name once
# the package is installed. The built-in `null` sink resolves first and
# cannot be shadowed.
[project.entry-points."dos.notifiers"]
collecting = "example_notifier:CollectingNotifier"

[tool.setuptools]
py-modules = ["example_notifier"]
